--- a/wicketcompact/src/main/webapp/WEB-INF/web.xml
+++ b/wicketcompact/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://www.oracle.com/webfolder/technetwork/jsc/xml/ns/javaee/web-app_3_1.xsd"
 	version="3.1">
 
-	<display-name>wicket-einsteiger</display-name>
+	<display-name>wicketcompact</display-name>
 
 	<!--
 		There are three means to configure Wickets configuration mode and they 
@@ -17,18 +17,16 @@
 		"deployment". If no configuration is found, "development" is the default. -->
 
 	<filter>
-		<filter-name>wicket.wicket-einsteiger</filter-name>
+		<filter-name>wicket.wicketcompact</filter-name>
 		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
 		<init-param>
 			<param-name>applicationClassName</param-name>
-			<param-value>de.schulte.teaching.WicketApplication</param-value>
+			<param-value>de.schulte.wicketcompact.WicketApplication</param-value>
 		</init-param>
 	</filter>
 
 	<filter-mapping>
-		<filter-name>wicket.wicket-einsteiger</filter-name>
+		<filter-name>wicket.wicketcompact</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
-
 </web-app>
