--- a/wicketcompact/pom.xml
+++ b/wicketcompact/pom.xml
@@ -62,7 +62,13 @@
 			<version>${wicket.version}</version>
 		</dependency>
 
-		<!-- LOGGING DEPENDENCIES - SLF4J-SIMPLE -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
+        <!-- LOGGING DEPENDENCIES - SLF4J-SIMPLE -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
