custom validators in category creation with variables

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/WicketApplication.utf8.properties
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/WicketApplication.utf8.properties
@@ -3,3 +3,4 @@ UrlValidator=Im Feld '${label}' haben Sie eine ungültige URL eingegeben. Bitte 
 RangeValidator.range=Für '${label}' sind nur Werte zwischen ${minimum} und ${maximum} erlaubt.
 RangeValidator.minimum=Für '${label}' sind nur Werte von mindestens ${minimum} erlaubt.
 RangeValidator.maximum=Für '${label}' sind nur Werte von maximal ${maximum} erlaubt.
+UniqueCategoryNameValidator=Es existiert bereits eine Kategorie mit dem Namen '${input}'. Eine typische Kategorie, die Ihnen möglicherweise noch fehlt ist z.B. '${suggestedCategory}'
