switched validation of categories to JSR-303 validation (wicket-bean-validation)

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/WicketApplication.utf8.properties
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/WicketApplication.utf8.properties
@@ -3,4 +3,5 @@ UrlValidator=Im Feld '${label}' haben Sie eine ungültige URL eingegeben. Bitte 
 RangeValidator.range=Für '${label}' sind nur Werte zwischen ${minimum} und ${maximum} erlaubt.
 RangeValidator.minimum=Für '${label}' sind nur Werte von mindestens ${minimum} erlaubt.
 RangeValidator.maximum=Für '${label}' sind nur Werte von maximal ${maximum} erlaubt.
-UniqueCategoryNameValidator=Es existiert bereits eine Kategorie mit dem Namen '${input}'. Bitte wählen Sie einen anderen Namen.
+unique.category.name=Es existiert bereits eine Kategorie mit dem Namen '${input}'. Bitte wählen Sie einen anderen Namen.
+category.imageurl.invalid=Bitte geben Sie eine gültige URL für das Bild dieser Kategorie an (im Format JPG)
