added drop down choice to article creation form

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/WicketApplication.utf8.properties
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/WicketApplication.utf8.properties
@@ -5,3 +5,4 @@ RangeValidator.minimum=Für '${label}' sind nur Werte von mindestens ${minimum} 
 RangeValidator.maximum=Für '${label}' sind nur Werte von maximal ${maximum} erlaubt.
 unique.category.name=Es existiert bereits eine Kategorie mit dem Namen '${input}'. Bitte wählen Sie einen anderen Namen.
 category.imageurl.invalid=Bitte geben Sie eine gültige URL für das Bild dieser Kategorie an (im Format JPG)
+null=Bitte auswählen
