new pages for table and category creation / switched to jsr-303 validation everywhere

--- a/wicketcompact/src/main/java/de/schulte/wicketcompact/WicketApplication.utf8.properties
+++ b/wicketcompact/src/main/java/de/schulte/wicketcompact/WicketApplication.utf8.properties
@@ -1,8 +1,8 @@
 Required=Das Feld '${label}' ist ein Pflichtfeld. Bitte geben Sie einen Wert ein.
-UrlValidator=Im Feld '${label}' haben Sie eine ungültige URL eingegeben. Bitte korrigieren Sie diese.
 RangeValidator.range=Für '${label}' sind nur Werte zwischen ${minimum} und ${maximum} erlaubt.
 RangeValidator.minimum=Für '${label}' sind nur Werte von mindestens ${minimum} erlaubt.
 RangeValidator.maximum=Für '${label}' sind nur Werte von maximal ${maximum} erlaubt.
 unique.category.name=Es existiert bereits eine Kategorie mit dem Namen '${input}'. Bitte wählen Sie einen anderen Namen.
-category.imageurl.invalid=Bitte geben Sie eine gültige URL für das Bild dieser Kategorie an (im Format JPG)
+imageurl.invalid=Bitte geben Sie eine gültige URL für das Bild an (im Format JPG)
 null=Bitte auswählen
+article.price.min=Der minimale Preis für einen Artikel liegt bei ${value}
