--- a/wicketcompact/pom.xml
+++ b/wicketcompact/pom.xml
@@ -120,15 +120,21 @@
 			<version>${jetty9.version}</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
-		<!-- uncomment if WebSocket support is needed
-		<dependency>
-			<groupId>org.eclipse.jetty.websocket</groupId>
-			<artifactId>javax-websocket-server-impl</artifactId>
-			<version>${jetty9.version}</version>
-			<scope>test</scope>
-		</dependency>
-		-->
+        <!-- uncomment if WebSocket support is needed
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>javax-websocket-server-impl</artifactId>
+            <version>${jetty9.version}</version>
+            <scope>test</scope>
+        </dependency>
+        -->
 	</dependencies>
 	<build>
 		<resources>
